# develop

./: README.md  main.py  pyproject.toml
src/: main.py  masks.py  processint.py  widget.py
tests/: test_masks.py  test_processing.py  test_widget.py
