[tool.poetry]
name = "pythonproject13"
version = "0.1.0"
description = ""
authors = ["irina456 <iradyachenko27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.isort]
line_length = 119
skip_glob = ["docs/*"]
skip = [".gitignore", ".dockerignore"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"